@@ -1,4 +1,3 @@
-export(.Last.lib)
 export(aov.car)
 export(compare.2.vectors)
 export(ez.glm)
